--- a/src/PawPadIO.Hub.API/project.json
+++ b/src/PawPadIO.Hub.API/project.json
@@ -1,24 +1,24 @@
 {
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.1",
+      "version": "1.1.0",
       "type": "platform"
     },
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.*",
-    "Microsoft.AspNetCore.Mvc.Core": "1.0.*",
-    "Microsoft.AspNetCore.Mvc.Formatters.Json": "1.0.*",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.*",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.*",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.*",
-    "Microsoft.Extensions.Configuration.FileExtensions": "1.0.*",
-    "Microsoft.Extensions.Configuration.Json": "1.0.*",
-    "Microsoft.Extensions.Logging": "1.0.*",
-    "Microsoft.Extensions.Logging.Console": "1.0.*",
-    "Microsoft.Extensions.Logging.Debug": "1.0.*",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.*",
-    "IdentityServer4.AccessTokenValidation": "1.0.1-rc2",
     "Vibrant.InfluxDB.Client": "3.0.0",
-    "PawPadIO.Hub.Plugin.Interfaces": "1.0.0-*"
+    "PawPadIO.Hub.Plugin.Interfaces": "1.0.0-*",
+    "IdentityServer4.AccessTokenValidation": "1.0.2",
+    "Microsoft.AspNetCore.Mvc.Core": "1.1.0",
+    "Microsoft.AspNetCore.Mvc.Formatters.Json": "1.1.0",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Extensions.Logging.Console": "1.1.0",
+    "Microsoft.Extensions.Logging.Debug": "1.1.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0"
   },
 
   "tools": {
@@ -26,7 +26,7 @@
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
+    "netcoreapp1.1": {
       "imports": [
         "dotnet5.6",
         "portable-net45+win8"
