--- a/src/PawPadIO.Hub.Auth/project.json
+++ b/src/PawPadIO.Hub.Auth/project.json
@@ -4,35 +4,14 @@
   "dependencies": {
     "IdentityServer4": "1.0.0-rc2",
     "IdentityServer4.AspNetIdentity": "1.0.0-rc2",
-    "Microsoft.AspNetCore.Authentication.Cookies": "1.0.*",
-    "Microsoft.AspNetCore.Diagnostics": "1.0.*",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.*",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.*",
-    "Microsoft.AspNetCore.Mvc": "1.0.*",
     "Microsoft.AspNetCore.Razor.Tools": {
       "version": "1.0.0-preview2-final",
-      "type": "build"
-    },
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.*",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.*",
-    "Microsoft.AspNetCore.StaticFiles": "1.0.*",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.*",
-    "Microsoft.EntityFrameworkCore.Design": {
-      "version": "1.0.*",
       "type": "build"
     },
     "Microsoft.EntityFrameworkCore.Tools": {
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.*",
-    "Microsoft.Extensions.Configuration.Json": "1.0.*",
-    "Microsoft.Extensions.Configuration.UserSecrets": "1.0.*",
-    "Microsoft.Extensions.Logging": "1.0.*",
-    "Microsoft.Extensions.Logging.Console": "1.0.*",
-    "Microsoft.Extensions.Logging.Debug": "1.0.*",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.*",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
       "version": "1.0.0-preview2-final",
       "type": "build"
@@ -41,14 +20,32 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.Authentication.OpenIdConnect": "1.0.0",
-    "BundlerMinifier.Core": "2.2.296",
     "Microsoft.NETCore.App": {
-      "version": "1.0.1",
+      "version": "1.1.0",
       "type": "platform"
     },
     "Konscious.Security.Cryptography.Argon2": "1.0.3",
-    "Microsoft.Extensions.Options": "1.0.0"
+    "BundlerMinifier.Core": "2.2.306",
+    "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
+    "Microsoft.AspNetCore.Authentication.OpenIdConnect": "1.1.0",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.0",
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
+    "Microsoft.AspNetCore.Mvc": "1.1.0",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+    "Microsoft.AspNetCore.StaticFiles": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Design": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Extensions.Logging.Console": "1.1.0",
+    "Microsoft.Extensions.Logging.Debug": "1.1.0",
+    "Microsoft.Extensions.Options": "1.1.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0"
   },
 
   "tools": {
@@ -65,7 +62,7 @@
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
+    "netcoreapp1.1": {
       "imports": [
         "dotnet5.6",
         "portable-net45+win8"
