--- a/src/PawPadIO.Hub.API/Properties/launchSettings.json
+++ b/src/PawPadIO.Hub.API/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Kestrel": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
