--- a/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
+++ b/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="2.4.0" />
+    <PackageReference Include="GraphQL.Authorization" Version="2.1.29" />
   </ItemGroup>
 
   <ItemGroup>
