Pinned GraphQL-Parser to 5.1.0 (#5)

--- a/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
+++ b/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="3.0.0-preview-1490" />
+    <PackageReference Include="GraphQL-Parser" Version="5.1.0" />
     <PackageReference Include="GraphQL.Authorization" Version="3.0.39-preview-39" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
