--- a/src/PawPadIO.Hub.Domain/PawPadIO.Hub.Domain.csproj
+++ b/src/PawPadIO.Hub.Domain/PawPadIO.Hub.Domain.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.Storage" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.4" />
   </ItemGroup>
 
 </Project>
