--- a/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
+++ b/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
@@ -5,9 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL" Version="3.0.0-preview-1648" />
-    <PackageReference Include="GraphQL-Parser" Version="5.1.2" />
-    <PackageReference Include="GraphQL.Authorization" Version="3.0.40-preview-40" />
+    <PackageReference Include="GraphQL" Version="3.0.0" />
+    <PackageReference Include="GraphQL.Authorization" Version="3.0.43" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
