--- a/src/PawPadIO.Hub.API/PawPadIO.Hub.API.csproj
+++ b/src/PawPadIO.Hub.API/PawPadIO.Hub.API.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="GraphQL.Server.Transports.WebSockets" Version="4.4.0" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ServiceDescriptors\" />
