--- a/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
+++ b/src/PawPadIO.Hub.GraphQL/PawPadIO.Hub.GraphQL.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL" Version="3.2.0" />
-    <PackageReference Include="GraphQL.Authorization" Version="3.1.0" />
+    <PackageReference Include="GraphQL" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,4 +18,7 @@
     <ProjectReference Include="..\PawPadIO.Hub.Domain\PawPadIO.Hub.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Microsoft.Extensions.DependencyInjection.Abstractions" />
+  </ItemGroup>
 </Project>
